--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>Doors</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
     <header>
     <h1> Doors </h1>
